# bitrs

./: .env.example  .gitignore  Cargo.toml  README.md  README_CN.md  docker-compose.yml  error.md
backend/: Cargo.toml
backend/src/: analytics.rs  buyback.rs  config.rs  cross_chain_monitor.rs  errors.rs  main.rs  mev.rs  middleware.rs  models.rs  order_router.rs  price_monitor.rs  rate_limiter.rs  reward_handler.rs  solana.rs  tokenomics.rs  ws.rs
backend/src/api/: amm.rs  analytics.rs  assets.rs  bridge.rs  docs.rs  mod.rs  orderbook.rs  rewards.rs  trades.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/components/analytics/: SystemMetrics.tsx
frontend/src/components/common/: BuybackStats.tsx  ErrorBoundary.tsx  TransactionPreview.tsx
frontend/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/trading/: OrderBook.tsx  TradeForm.tsx  TradingChart.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useMarketData.ts
frontend/src/pages/: _app.tsx  analytics.tsx  bridge.tsx  docs.tsx  governance.tsx  index.tsx  pools.tsx
frontend/src/services/: analytics.ts  api.ts  buyback.ts  rewards.ts  websocket.ts
frontend/src/styles/: globals.css
frontend/src/types/: amm.ts  asset.ts  market.ts
frontend/src/utils/: format.ts
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs
programs/dex_core/: Cargo.toml  lib.rs
programs/dex_core/src/: events.rs  lib.rs  risk.rs  storage.rs
programs/dex_core/src/core/: mod.rs
programs/dex_core/src/cross_chain/: mod.rs
programs/dex_core/src/lp_mining/: mod.rs
programs/dex_core/src/orderbook/: mod.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
relayer/: Cargo.toml  config.example.toml
relayer/src/: config.rs  events.rs  main.rs  validators.rs
relayer/src/chains/: bsc.rs  ethereum.rs  mod.rs  solana.rs
