[package]
name = "bitrs-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for BitRS distributed exchange"

[dependencies]
# Web框架
actix-web = "4.3.1"
actix-cors = "0.6.4"

# Solana客户端库
solana-client = "1.17.0"
solana-sdk = "1.17.0"
solana-program = "1.17.0"
anchor-client = "0.28.0"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步和并发
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# 工具库
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0"
anyhow = "1.0"

# API文档
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

# 数据库连接（可选，用于持久化）
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }

[features]
default = []
persistence = ["sqlx"]