[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for BitRS distributed exchange"

[dependencies]
# Web框架
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix = "0.13.0"
actix-web-actors = "4.2.0"

# Solana客户端库 - 使用工作区依赖
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
anchor-client = { workspace = true }
anchor-lang = { workspace = true }

# 共享项目代码
dex_core = { workspace = true }

# 序列化/反序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 异步和并发
tokio = { workspace = true }
futures = "0.3"

# 工具库
dotenv = "0.15.0"
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
derive_more = "0.99.17"
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
ring = "0.16.20"
sha2 = "0.10.6"

# API文档
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

# 数据库连接（可选，用于持久化）
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "json",
    "uuid",
], optional = true }

[features]
default = []
persistence = ["sqlx"]
