[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
description = "跨链中继器，连接不同区块链网络的交易"

[dependencies]
# 使用工作区定义的依赖
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

# 以太坊相关依赖
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"

# 监控和指标
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"

# 工具库
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["ethereum", "solana"]
ethereum = []
solana = []
bsc = []
metrics = []

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
