[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
description = "跨链桥接程序，实现不同区块链之间的资产转移"

[lib]
name = "bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
# Solana和Anchor依赖
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }

# 共享的项目代码
dex_core = { workspace = true }

# 工具库
bytemuck = { version = "1.14", features = ["derive"] }
borsh = "0.10"
sha2 = "0.10"
ed25519-dalek = "1.0.1"
arrayref = "0.3.7"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = { workspace = true }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
test-sbf = []
