[package]
name = "dex_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A distributed exchange core implementation for Solana"
repository = "https://github.com/yourusername/dex_core"
license = "MIT OR Apache-2.0"

[lib]
name = "dex_core"
path = "src/lib.rs"

[dependencies]
# Solana 和 Anchor 依赖
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"
solana-sdk = { version = "1.17", default-features = false }

# 常用依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# 交易所和金融相关的依赖
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
chrono = { version = "0.4", features = ["serde"] }

# 可能需要的其他依赖
async-trait = "0.1"
futures = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
borsh = "0.10"

[dev-dependencies]
# 测试依赖
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
solana-program-test = "1.17"

[features]
default = []
metrics = []
trading-limits = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
